fixed about page margins/spacing

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -51,7 +51,7 @@
         height: 50vh;
         align-items: center;
         margin-left: 1.4rem;
-        margin-top: 15%;
+        margin-top: 20%;
     }
 
     .about_desc {
@@ -63,7 +63,7 @@
         border-radius: 50%;
         max-width: 70%;
         margin-left: 1.4rem;
-        margin-bottom: 40%;
+        margin-bottom: 30%;
     }
 
 }
